# impacted

./: .gitignore  .gitpod.yml  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile  release.toml  renovate.json  verify.sh
.cargo/: fast_compiles_config
.github/workflows/: build.yml  check.yml  create-release.yml  look-ahead.yml  release.yaml  release.yml
examples/: bevy.rs
src/: bounds.rs  deprecated.rs  epa.rs  gjk.rs  lib.rs  minkowski.rs  ray.rs  shapes.rs  simplex.rs  transform.rs
src/broad_phase_interop/: bvh_arena.rs  mod.rs
src/interop/: bevy_transform_06.rs  glam_020.rs  mod.rs
src/math/: array.rs  glam_0_24.rs  mod.rs
src/transform/: bevy_transform_06.rs  bevy_transform_07.rs  bevy_transform_08.rs  bevy_transform_09.rs  mod.rs
src/v2/: epa.rs  gjk.rs  minkowski.rs  mod.rs  ray.rs  shapes.rs
src/v2/broad_phase_interop/: bvh_arena.rs
src/v2/math/: glam.rs  mod.rs
src/v2/transform/: mod.rs
src/v3/: aabb.rs  math.rs  mod.rs  point.rs  range.rs  shapes.rs  vector.rs
src/v3/interop/: glam_0_24.rs  mod.rs
tests/: collision.rs  collision_spec.rs  v3_collision_spec.rs  v3_ray_cast_spec.rs
