[package]
name = "impacted"
version = "2.0.0"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.60"
description = "2d collision test for arbitrary convex shapes"
repository = "https://github.com/jcornaz/impacted"
categories = ["game-development"]
keywords = ["collision", "2d", "geometry", "gamedev", "gjk"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["glam/std", "bvh-arena?/std"]
unstable-v3 = []
unstable-v3-aabb = ["unstable-v3", "libm"]
glam-0-24 = []

[dependencies]
# Public
bvh-arena = { version = "1.1.3", default-features = false, optional = true }

# Private
glam = { version = "0.24.1", default-features = false, features = ["libm"] }
sealed = { version = "0.5.0", default-features = false }
smallvec = { version = "1.11.1", default-features = false }
libm = { version = "0.2.7", default-features = false, optional = true }

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }
bevy = { version = "0.11.2", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_core_pipeline", "bevy_sprite", "bevy_asset", "x11"]}
glam = { version = "0.24.1", features = ["libm", "approx"] }
approx = "0.5.1"

[build-dependencies]
rustc_version = "0.4.0"

[[example]]
name = "bevy"
