[package]
name = "impacted"
version = "2.0.1"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.68"
description = "2d collision test for arbitrary convex shapes"
repository = "https://github.com/jcornaz/impacted"
categories = ["game-development"]
keywords = ["collision", "2d", "geometry", "gamedev", "gjk"]

[badges.maintenance]
status = "passively-maintained"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["glam/std", "bvh-arena?/std"]
unstable-v3 = []
unstable-v3-aabb = ["unstable-v3", "libm"]
unstable-v3-glam-0-24 = []
glam-0-24 = [] # Deprecated

[dependencies]
# Public
bvh-arena = { version = "1.1.3", default-features = false, optional = true }

# Private
glam = { version = "0.28.0", default-features = false, features = ["libm"] }
sealed = { version = "0.5.0", default-features = false }
smallvec = { version = "1.13.2", default-features = false }
libm = { version = "0.2.8", default-features = false, optional = true }

[dev-dependencies]
rstest = { version = "0.21", default-features = false }
bevy = { version = "0.12.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_core_pipeline", "bevy_sprite", "bevy_asset", "x11"]}
glam = { version = "0.28.0", features = ["libm", "approx"] }
approx = "0.5.1"

[build-dependencies]
rustc_version = "0.4.0"

[[example]]
name = "bevy"
