[package]
name = "impacted"
version = "2.0.3"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.68.2"
description = "2d collision test for arbitrary convex shapes"
repository = "https://github.com/jcornaz/impacted"
categories = ["game-development"]
keywords = ["collision", "2d", "geometry", "gamedev", "gjk"]

[badges.maintenance]
status = "passively-maintained"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["glam/std", "bvh-arena?/std"]
unstable-v3 = []
unstable-v3-aabb = ["unstable-v3", "libm"]
unstable-v3-glam-0-24 = []
glam-0-24 = [] # Deprecated

[build-dependencies]
rustc_version = "0.4"

[dependencies]
# Public
bvh-arena = { version = "1.1", default-features = false, optional = true }

# Private
glam = { version = "0.29", default-features = false, features = ["libm"] }
sealed = { version = "0.6", default-features = false }
smallvec = { version = "1.9", default-features = false }
libm = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
rstest = { version = "0.23.0", default-features = false }
bevy = { version = "0.12.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_core_pipeline", "bevy_sprite", "bevy_asset", "x11"]}
glam = { version = "0.29.2", features = ["libm", "approx"] }
approx = "0.5.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }

[[example]]
name = "bevy"
